# deep-thinking

./: README.md  companies_list.csv  data-dashboard.html  deep-thinking.html  exhibitors_for_google_sheets.csv  leetcode_problems.csv
DemandSniper/: .env.example  .gitignore  README.md  TEST_AND_RUN_GUIDE.md  TEST_REPORT.md  main.py  requirements.txt
DemandSniper/api/: __init__.py  main.py  schemas.py
DemandSniper/api/routes/: __init__.py  analytics.py  companies.py  config.py  jobs.py  scraper.py
DemandSniper/config/: __init__.py  loader.py  scoring_config.yaml  search_config.yaml  settings.py
DemandSniper/dashboard/: __init__.py  app.py  app_enterprise.py  app_legacy.py  app_saas.py  utils.py
DemandSniper/dashboard/components/: __init__.py  alternative_charts.py  (+8 more)
DemandSniper/database/: __init__.py  crud.py  models.py
DemandSniper/scraper/: __init__.py  api_integrations.py  base.py  dice.py  indeed.py  linkedin.py  scheduler.py  utils.py
DemandSniper/tests/: conftest.py  test_api.py  test_models.py  test_scoring.py
DemandSniper/utils/: __init__.py  deduplication.py  demand_scoring.py  enrichment.py  export.py  notifications.py  service_matcher.py
orbital-landing/: index.html
orbital-landing/css/: styles.css
orbital-landing/js/: CanvasRenderer.js  OrbitalExperience.js  Preloader.js  RandomInfoGenerator.js  ScrollController.js  main.js
stock-dashboard/: .gitignore  Dockerfile  README.md  data_fetcher.py  database.py  main.py  models.py  pyproject.toml  railway.json  requirements.txt  utils.py  vercel.json
stock-dashboard/templates/: index.html
