[project]
name = "stock-dashboard"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "yfinance>=0.2.36",
    "python-multipart>=0.0.9",
    "httpx>=0.26.0",
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
